ingress-nginx-kubernetes-dashboard.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
         # Включите use-regex, включите регулярное сопоставление пути 
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
         # nginx.ingress.kubernetes.io / secure-backends: "true" // Похоже, что версия 0.20.0 была удалена после выпуска, используйте следующую строку
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:    
    secretName: kubernetes-dashboard-certs
  rules:
  - host: dashboard
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
